# SolderMind

./: LICENSE  README.md  SOLERMIND_IMPLEMENTATION_NOTES.md  readme  requirements.txt
src/ai_pcb_quality/: __init__.py  api.py  inference_pipeline.py  ingestion.py  models.py  preprocessor.py
src/training/: inference_pipeline.py  orchestrator.py
training/: pyproject.toml
training/src/ai_pcb_quality/: api.py  vision.py
training/tests/: test_vision.py
