[project]
name = "ai-native-pcb-quality"
version = "0.1.0"
description = "AI-native PCB quality assurance scaffold with OpenCV and Ultralytics YOLO."
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.23.0"}
ultralytics = ">=8.0.0"
opencv-python-headless = ">=4.8.0"
pydantic = ">=2.8.0"
kafka-python = ">=2.0.2"
paho-mqtt = ">=1.6.1"
